--- a/dash/.env.example
+++ b/dash/.env.example
@@ -2,6 +2,7 @@
 
 NEXT_PUBLIC_LIVE_URL=http://localhost:4000
 API_URL=http://localhost:4001
+NEXT_PUBLIC_ANALYTICS_URL=http://localhost:4002
 
 # NEXT_PUBLIC_MAP_KEY=
 
