--- a/dash/package.json
+++ b/dash/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "2.2.2",
+		"chart.js": "^4.5.0",
 		"clsx": "2.1.1",
 		"geist": "1.3.1",
 		"maplibre-gl": "5.4.0",
@@ -19,6 +20,7 @@
 		"next": "15.3.1",
 		"pako": "2.1.0",
 		"react": "19.1.0",
+		"react-chartjs-2": "^5.3.0",
 		"react-dom": "19.1.0",
 		"sharp": "0.34.1",
 		"zod": "3.23.8",
